# vault0

./: .gitignore  Gemfile  LICENSE  README.md  Rakefile
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml  cbindgen.toml  rustfmt.toml
lib/migrations/: 001_initial_schema.sql
lib/src/: crypto.rs  keychain.rs  lib.rs  models.rs  rpc.rs  server.rs  session.rs
lib/src/db/: api_key.rs  auth.rs  environment.rs  mod.rs  secret.rs  settings.rs  vault.rs  vault_key.rs
ui/mac/Vault0/: Info.plist  Vault0-Bridging-Header.h  Vault0App.swift
ui/mac/Vault0.xcodeproj/: project.pbxproj
ui/mac/Vault0/Managers/: BiometricManager.swift  SessionManager.swift  WindowManager.swift
ui/mac/Vault0/Models/: MasterPassword.swift  Secret.swift
ui/mac/Vault0/Services/: Vault0Library.swift
ui/mac/Vault0/Views/Authentication/: LockScreen.swift  Login.swift
ui/mac/Vault0/Views/Components/: TrashButton.swift
ui/mac/Vault0/Views/Main/: AddSecret.swift  AddVault.swift  ApiKeys.swift  MainWindow.swift  ManageEnvironments.swift  ManageVaultsDialog.swift  Secrets.swift
ui/mac/Vault0/Views/Onboarding/: Onboarding.swift
ui/mac/Vault0/Views/Shared/: Style.swift
