[package]
name = "vault0-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vault0"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
jsonwebtoken = "9.3"
vault0 = { path = "../lib" }
dialoguer = "0.11"
dotenvy = "0.15"
tarpc = { version = "0.35", features = ["tokio1", "serde-transport"] }
tokio = { version = "1.42", features = ["rt", "macros", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"
aes-gcm = "0.10"
