[package]
name = "vault0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
p256 = "0.13"
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"
generic-array = "0.14"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
uuid = { version = "1.19.0", features = ["v4"] }
tokio = { version = "1.42", features = ["rt", "net", "io-util", "macros", "sync", "signal", "rt-multi-thread"] }
env_logger = "0.11"
jsonwebtoken = "9.3"
base64 = "0.22"
libc = "0.2"
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
tarpc = { version = "0.35", features = ["tokio1", "serde-transport"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
